1_ns_frontend.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend
  labels:
    ns-name: frontend
spec: {}
status: {}
