2_ns_backend.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: backend
  # Etykieta 'ns-name' pozwala NetworkPolicy w przestrzeni nazw frontend
  # na identyfikację i dopuszczenie ruchu z i do przestrzeni nazw backend.
  labels:
    ns-name: backend
spec: {}
status: {}
