4_deploy_backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend
  # Nazwa Deploymentu backend.
  name: backend
  # Nazwa przestrzeni nazw backend.
  namespace: backend
spec:
  # Liczba replik Deploymentu backend ustawiona na 1.
  replicas: 1
  selector:
    matchLabels:
      app: backend
  strategy: {}
  template:
    metadata:
      labels:
        app: backend
    spec:
      # Node Affinity: Wymusza uruchomienie podu Deploymentu backend na węźle oznaczonym etykietą zone=backend.
      # Zapewnia to fizyczną separację od frontendu.
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: zone
                operator: In
                values:
                - backend
      containers:
      # Obraz nginx dla Deploymentu backend.
      - image: nginx
        name: nginx
        # Zasoby: Niezbędne do działania przy włączonym ResourceQuota.
        # Zasoby dopasowane do limitów Quota backendu (200m i 256Mi RAM zostawia miejsce dla poda my-sql i poda generującego obciążenie).
        resources:
          requests:
            cpu: 200m
            memory: 256Mi
          limits:
            cpu: 200m
            memory: 256Mi
status: {}
