load-generator.yaml
apiVersion: v1
kind: Pod
metadata:
  name: load-generator
  namespace: backend
  labels:
    app: backend
spec:
  restartPolicy: Never
  containers:
  - name: load-generator
    image: busybox:1.28
    command:
      - /bin/sh
      - -c
      - |
        while true; do wget -q -O- http://frontend-svc.frontend.svc.cluster.local &>/dev/null; done &
        while true; do wget -q -O- http://frontend-svc.frontend.svc.cluster.local &>/dev/null; done &
        while true; do wget -q -O- http://frontend-svc.frontend.svc.cluster.local &>/dev/null; done &
        while true; do wget -q -O- http://frontend-svc.frontend.svc.cluster.local &>/dev/null; done &
        wait
    resources:
      requests:
        cpu: 50m
        memory: 50Mi
      limits:
        cpu: 200m
        memory: 100Mi
