6_svc_frontend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: frontend
  name: frontend-svc
  namespace: frontend
spec:
  ports:
  # Port usługi
  - port: 80
    protocol: TCP
    targetPort: 80
  # Etykieta selectora dotycząca frontendu
  selector:
    app: frontend
  # Typ NodePort usługi
  type: NodePort
status:
  loadBalancer: {}
