7_svc_backend.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
  name: backend-svc
  namespace: backend
spec:
  ports:
  # Port usługi
  - port: 80
    protocol: TCP
    targetPort: 80
  # Etykieta selectora dotycząca backendu
  selector:
    app: backend
  # Typ ClusterIP usługi
  type: ClusterIP
status:
  loadBalancer: {}
