8_svc_mysql.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: my-sql
  name: mysql-svc
  namespace: backend
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: my-sql
  type: ClusterIP
status:
  loadBalancer: {}
